--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <link href="style/index.css" rel="stylesheet">
-    <title>Rétro game - Pong</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite + React + TS</title>
 </head>
 <body>
-<h1>Pong</h1>
-<main>
-    <canvas id="pong-area" width="640" height="480"></canvas>
-</main>
-<script src="js/main.js"></script>
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
