--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <title>The Pinging Pong</title>
   <style>html, body { overflow: hidden; }</style>
+  <link rel="shortcut icon" href="public/favicon.ico">
 </head>
 <body>
 <div id="root"></div>
